[project]
name = "jimeng-mcp"
version = "0.1.0"
description = "Jimeng MCP Server for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "NB4747" },
]
dependencies = [
    "mcp>=1.27.0",
    "playwright>=1.59.0",
    "httpx>=0.28.0",
    "pillow>=10.0",
    "rembg>=2.0",
]

[project.scripts]
jimeng-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
